--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMNORC7/7IzUWeMk/+BfNSG",
+      "authorship_tag": "ABX9TyNYwcNQXZC9IW9Ru+nvGaai",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,7 +71,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -99,7 +99,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -662,6 +662,132 @@
             "--------\n",
             "colour: white\n",
             "move\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gender=input(\"gender= \")\n",
+        "if gender==\"male\":\n",
+        " print(\"monday, wednesday,friday\")\n",
+        "else:\n",
+        "  print(\"tuesday, thursday, saturday\")\n"
+      ],
+      "metadata": {
+        "id": "v23vjhJ_4-ra",
+        "outputId": "581efedd-6ed3-47fc-88e4-e92989d8d0de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "gender= female\n",
+            "tuesday, thursday, saturday\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gender=input(\"gender= \")\n",
+        "if gender==\"male\":\n",
+        "  print(\"go\")\n",
+        "else:\n",
+        "  print(\"come\")"
+      ],
+      "metadata": {
+        "id": "lCDSeSFR6dT3",
+        "outputId": "10829bec-833c-439b-aea6-daf884cc97e4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "gender= female\n",
+            "come\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "principal_amount=int(input(\"principal amount\"))\n",
+        "rate=int(input(\"rate\"))\n",
+        "time=int(input(\"time\"))\n",
+        "amount=(principal_amount*rate*time)/100\n",
+        "print(amount)"
+      ],
+      "metadata": {
+        "id": "A34TP1VQ9mND",
+        "outputId": "212196c1-526c-4ec1-9830-2e8e234f32d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "principal amount500\n",
+            "rate4\n",
+            "time5\n",
+            "100.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "principal=int(input(\"principal: \"))\n",
+        "rate=int(input(\"rate: \"))\n",
+        "month=int(input(\"month: \"))\n",
+        "time_in_days=int(input(\"time in days\"))\n",
+        "time_in_month=(time_in_days/30)\n",
+        "amount=principal*rate*time/100\n",
+        "si=principal*rate*time*time_in_month/100\n",
+        "print(amount)\n",
+        "print(si)\n",
+        "print(amount+si)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "xiQ2LlCMAB4S",
+        "outputId": "c066f355-7332-4d56-931e-98740fbc2ce0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "principal: 500\n",
+            "rate: 4\n",
+            "month: 5\n",
+            "time in days5\n",
+            "100.0\n",
+            "16.666666666666664\n",
+            "116.66666666666666\n"
           ]
         }
       ]
