--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNYwcNQXZC9IW9Ru+nvGaai",
+      "authorship_tag": "ABX9TyMGkgJHqnBsTnP01YcTb9oL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -682,7 +682,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -710,7 +710,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -738,7 +738,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -775,7 +775,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -788,6 +788,117 @@
             "100.0\n",
             "16.666666666666664\n",
             "116.66666666666666\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "principal=int(input(\"principal: \"))\n",
+        "rate=int(input(\"rate: \"))\n",
+        "time=int(input(\"month: \"))\n",
+        "days=int(input(\"days: \"))\n",
+        "time_in_month=days/30\n",
+        "amount=(principal*rate*time)/100\n",
+        "si=(principal*rate*time*time_in_month/100)\n",
+        "print(amount)\n",
+        "print(si)\n",
+        "print(amount+si)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "iW-90CLoGVrv",
+        "outputId": "d8982d69-afce-4061-d9ff-29642756bb9a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "principal: 15000\n",
+            "rate: 5\n",
+            "month: 6\n",
+            "days: 20\n",
+            "4500.0\n",
+            "3000.0\n",
+            "7500.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "marks=input(\"marks: \")\n",
+        "if marks>\"30\":\n",
+        " print(\"pass\")\n",
+        "else:\n",
+        "  print(\"fail\")"
+      ],
+      "metadata": {
+        "id": "quOc9-RlLL1Z",
+        "outputId": "2df5fc83-accb-434a-ff36-358d4722ff5c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "marks: 55\n",
+            "pass\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "principal=40000\n",
+        "rate=10\n",
+        "time_in_months=8\n",
+        "time_in_days=25\n",
+        "print(\"principal= \",principal)\n",
+        "print(\"rate= \",rate)\n",
+        "print(\"time in months =\",time_in_months)\n",
+        "print(\"time in days= \",time_in_days)\n",
+        "total_time=time_in_days/30\n",
+        "amount=principal*rate*time/100\n",
+        "si=principal*rate*time_in_month*total_time/100\n",
+        "print(total_time)\n",
+        "print(amount)\n",
+        "print(si)\n",
+        "print(amount+si)"
+      ],
+      "metadata": {
+        "id": "273lPd4kOctY",
+        "outputId": "e7ac5bab-9623-4fdd-8cf2-4cb72da706d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "principal=  40000\n",
+            "rate=  10\n",
+            "time in months = 8\n",
+            "time in days=  25\n",
+            "0.8333333333333334\n",
+            "24000.0\n",
+            "2222.2222222222217\n",
+            "26222.222222222223\n"
           ]
         }
       ]
