--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMGkgJHqnBsTnP01YcTb9oL",
+      "authorship_tag": "ABX9TyNQja/s2BiI7CavYSPwolNM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -814,7 +814,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -847,7 +847,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -885,7 +885,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -902,6 +902,148 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number=int(input(\"number= \"))\n",
+        "if number % 2==0:\n",
+        "  print(\"even\")\n",
+        "else:\n",
+        "    print(\"odd\")\n"
+      ],
+      "metadata": {
+        "id": "PjQROfKPCYy3",
+        "outputId": "8d5c83b5-9b46-4032-e3e6-7cc0cdaa63e8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "number= 60\n",
+            "even\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number=int(input(\"number\"))\n",
+        "if number % 7==0 and number % 5==0:\n",
+        "  print(\"divisible\")\n",
+        "else:\n",
+        "  print(\"not divisible\")"
+      ],
+      "metadata": {
+        "id": "kwJUZ8UQC7b-",
+        "outputId": "2e216a3c-480c-45ec-e50b-279a1fddd16d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "number35\n",
+            "divisible\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gender=input(\"gender\")\n",
+        "age=int(input(\"age\"))\n",
+        "if gender==\"male\":\n",
+        " print(\"hotel a\")\n",
+        " if age>30:\n",
+        "  print(\"building1\")\n",
+        " else:\n",
+        "  print(\"building2\")\n",
+        "else:\n",
+        "  print(\"hotel b\")\n",
+        "  if age>30:\n",
+        "    print(\"building1\")\n",
+        "  else:\n",
+        "    print(\"building2\")\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "rY6ibYH8ElMn",
+        "outputId": "d4426f77-4fe5-4b04-98eb-6e66a8bc169d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "genderfemale\n",
+            "age35\n",
+            "hotel b\n",
+            "building1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "month=input(\"month_\")\n",
+        "days=int(input(\"days\"))\n",
+        "if month==\"jan\" or month==\"march\" or month==\"may\" or month==\"july\" or month==\"august\" or month==\"october\" or month==\"december\":\n",
+        " days_in_month=31\n",
+        "elif month==\"april\" or month==\"june\" or month==\"september\" or month==\"november\":\n",
+        "  days_in_month=30\n",
+        "else:\n",
+        "  days_in_month=28\n",
+        "print(\"days_in_month\",days_in_month)\n",
+        "print(days/days_in_month)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "pW4Wq2_1KV3g",
+        "outputId": "f93174b2-a4b8-4ba4-eea9-7ddcdae02e8e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "month_july\n",
+            "days10\n",
+            "days_in_month 31\n",
+            "0.3225806451612903\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "68JSwDhXMnBn"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
