--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQja/s2BiI7CavYSPwolNM",
+      "authorship_tag": "ABX9TyOhHTGKorufWl+U5Qzf3cyN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -876,7 +876,7 @@
         "print(total_time)\n",
         "print(amount)\n",
         "print(si)\n",
-        "print(amount+si)"
+        "print(amount+si)\n"
       ],
       "metadata": {
         "id": "273lPd4kOctY",
@@ -906,6 +906,62 @@
     {
       "cell_type": "code",
       "source": [
+        "principal=int(input(\"principal\"))\n",
+        "rate=int(input(\"rate\"))\n",
+        "month=input(\"month\")\n",
+        "days=int(input(\"days\"))\n",
+        "if month==\"jan\" or month==\"march\" or month==\"may\" or month==\"july\" or month==\"august\" or month==\"october\" or month==\"december\":\n",
+        " days_in_month=31\n",
+        "elif month==\"april\" or month==\"june\" or month==\"september\" or month==\"november\":\n",
+        "  days_in_month=30\n",
+        "else:\n",
+        "  days_in_month=28\n",
+        "print(days/days_in_month)\n",
+        "amount=principal*rate*time/100\n",
+        "si=principal*rate*time_in_month*total_time/100\n",
+        "print(total_time)\n",
+        "print(amount)\n",
+        "print(si)\n",
+        "print(amount+si)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "M2u04TJxSAT9",
+        "outputId": "0a6cfe23-d4f8-4252-c673-a4d9ea9d0909",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 297
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "principal40000\n",
+            "rate5\n",
+            "monthjuly\n",
+            "days2\n",
+            "0.06451612903225806\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'time' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-795562967.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m   \u001b[0mdays_in_month\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m28\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdays\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mdays_in_month\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mamount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mprincipal\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mrate\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0msi\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mprincipal\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mrate\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtime_in_month\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtotal_time\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtotal_time\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'time' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "number=int(input(\"number= \"))\n",
         "if number % 2==0:\n",
         "  print(\"even\")\n",
@@ -913,11 +969,11 @@
         "    print(\"odd\")\n"
       ],
       "metadata": {
-        "id": "PjQROfKPCYy3",
-        "outputId": "8d5c83b5-9b46-4032-e3e6-7cc0cdaa63e8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PjQROfKPCYy3",
+        "outputId": "8d5c83b5-9b46-4032-e3e6-7cc0cdaa63e8"
       },
       "execution_count": 2,
       "outputs": [
@@ -941,11 +997,11 @@
         "  print(\"not divisible\")"
       ],
       "metadata": {
-        "id": "kwJUZ8UQC7b-",
-        "outputId": "2e216a3c-480c-45ec-e50b-279a1fddd16d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kwJUZ8UQC7b-",
+        "outputId": "2e216a3c-480c-45ec-e50b-279a1fddd16d"
       },
       "execution_count": 3,
       "outputs": [
@@ -980,11 +1036,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "rY6ibYH8ElMn",
-        "outputId": "d4426f77-4fe5-4b04-98eb-6e66a8bc169d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rY6ibYH8ElMn",
+        "outputId": "d4426f77-4fe5-4b04-98eb-6e66a8bc169d"
       },
       "execution_count": 6,
       "outputs": [
@@ -1016,13 +1072,13 @@
         "\n"
       ],
       "metadata": {
-        "id": "pW4Wq2_1KV3g",
-        "outputId": "f93174b2-a4b8-4ba4-eea9-7ddcdae02e8e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pW4Wq2_1KV3g",
+        "outputId": "5bac965b-de22-4be6-a42e-bd83d0ae7a1c"
       },
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
