--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOhHTGKorufWl+U5Qzf3cyN",
+      "authorship_tag": "ABX9TyOr0d6L2IX2GekRhWf1Nn6G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -908,6 +908,7 @@
       "source": [
         "principal=int(input(\"principal\"))\n",
         "rate=int(input(\"rate\"))\n",
+        "time=int(input(\"time\"))\n",
         "month=input(\"month\")\n",
         "days=int(input(\"days\"))\n",
         "if month==\"jan\" or month==\"march\" or month==\"may\" or month==\"july\" or month==\"august\" or month==\"october\" or month==\"december\":\n",
@@ -918,8 +919,7 @@
         "  days_in_month=28\n",
         "print(days/days_in_month)\n",
         "amount=principal*rate*time/100\n",
-        "si=principal*rate*time_in_month*total_time/100\n",
-        "print(total_time)\n",
+        "si=principal*rate*time*days_in_month/100\n",
         "print(amount)\n",
         "print(si)\n",
         "print(amount+si)\n",
@@ -927,13 +927,12 @@
       ],
       "metadata": {
         "id": "M2u04TJxSAT9",
-        "outputId": "0a6cfe23-d4f8-4252-c673-a4d9ea9d0909",
+        "outputId": "075b67c7-bdf4-46ee-ac8a-c42206532053",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 297
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -941,20 +940,13 @@
           "text": [
             "principal40000\n",
             "rate5\n",
-            "monthjuly\n",
-            "days2\n",
-            "0.06451612903225806\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'time' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-795562967.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m   \u001b[0mdays_in_month\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m28\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdays\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mdays_in_month\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mamount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mprincipal\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mrate\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0msi\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mprincipal\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mrate\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtime_in_month\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtotal_time\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtotal_time\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'time' is not defined"
+            "time6\n",
+            "monthmay\n",
+            "days20\n",
+            "0.6451612903225806\n",
+            "12000.0\n",
+            "372000.0\n",
+            "384000.0\n"
           ]
         }
       ]
@@ -975,7 +967,7 @@
         "id": "PjQROfKPCYy3",
         "outputId": "8d5c83b5-9b46-4032-e3e6-7cc0cdaa63e8"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1003,7 +995,7 @@
         "id": "kwJUZ8UQC7b-",
         "outputId": "2e216a3c-480c-45ec-e50b-279a1fddd16d"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1042,7 +1034,7 @@
         "id": "rY6ibYH8ElMn",
         "outputId": "d4426f77-4fe5-4b04-98eb-6e66a8bc169d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1078,7 +1070,7 @@
         "id": "pW4Wq2_1KV3g",
         "outputId": "5bac965b-de22-4be6-a42e-bd83d0ae7a1c"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
