--- a/vaishnavi.ipynb
+++ b/vaishnavi.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOTKpUtU57ugqlHy/dvoJpc",
+      "authorship_tag": "ABX9TyMNUz4/uo0BqcJafzCtHJdl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,25 +28,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "glZtjQrRE6v2",
-        "outputId": "ae942479-e7a0-4c6c-c0fb-318bcf12797b"
+        "outputId": "708d4989-388b-4baa-de0e-689d3151e02a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "HELLO, MY NAME IS VAISHNAVI?\n"
+            "HELLO, MY NAME IS VAISHNAVI.\n"
           ]
         }
       ],
       "source": [
-        "print(\"HELLO, MY NAME IS VAISHNAVI?\")"
+        "print(\"HELLO, MY NAME IS VAISHNAVI.\")"
       ]
     },
     {
@@ -170,6 +169,185 @@
           "name": "stdout",
           "text": [
             "how_are_you i am fine\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "first_number=52\n",
+        "second_number=50\n",
+        "sum=first_number+second_number\n",
+        "print(\"sum:\",sum)\n",
+        "sub=first_number-second_number\n",
+        "print(\"sub:\" ,sub)"
+      ],
+      "metadata": {
+        "id": "H4-lOnIUHjRO",
+        "outputId": "916e9d56-6d23-4134-ea12-bdeb440f033f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "sum: 102\n",
+            "sub: 2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name=\"vaishnavi sharma\"\n",
+        "print(name)\n",
+        "passion=\"singing\"\n",
+        "print(passion)"
+      ],
+      "metadata": {
+        "id": "q4lYBdKDIPal",
+        "outputId": "9dbf72c5-84ca-4e6b-f329-793af0af0474",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "vaishnavi sharma\n",
+            "singing\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "marks=int(input(\"marks\"))\n",
+        "if marks==90 or marks==95:\n",
+        "  print(\"excellent\")\n",
+        "elif marks==80 or marks==85:\n",
+        "  print(\"a+\")\n",
+        "else:\n",
+        "  print(\"pass\")\n"
+      ],
+      "metadata": {
+        "id": "jw5daDinIl8a",
+        "outputId": "026a7879-6d38-4365-b893-abf034c25aff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "marks85\n",
+            "a+\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "marks=int(input(\"marks_\"))\n",
+        "grade=input(\"grade=\")\n",
+        "if marks>90 and grade==\"a\":\n",
+        " print(\"excellent\")\n",
+        "else:\n",
+        "  print(\"pass\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "uLzA1WQTKN_D",
+        "outputId": "251e6565-c152-443a-acdd-330d07919f13",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "marks_98\n",
+            "grade=b\n",
+            "pass\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "month=input(\"month_ \")\n",
+        "if month==\"january\" or month==\"march\" or month==\"may\" or month==\"july\" or month==\"august\" or month==\"october\" or month==\"december\":\n",
+        "  print(31)\n",
+        "elif month==\"april\" or month==\"june\" or month==\"september\" or month==\"november\":\n",
+        "  print(30)\n",
+        "else:\n",
+        "  print(28)\n"
+      ],
+      "metadata": {
+        "id": "yRj4nZcqLWJb",
+        "outputId": "844e9c9e-b59e-4e26-9237-d53232b9b816",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "month_ august\n",
+            "31\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "month=input(\"month_ \")\n",
+        "days_in_month=int(input(\"days in month\"))\n",
+        "if month==\"january\" or month==\"march\" or month==\"may\" or month==\"july\" or month==\"august\" or month==\"october\" or month==\"december\":\n",
+        "  print(days_in_month)\n",
+        "elif month==\"april\" or month==\"june\" or month==\"september\" or month==\"november\":\n",
+        "  print(days_in_month)\n",
+        "else:\n",
+        "  print(days_in_month)"
+      ],
+      "metadata": {
+        "id": "yUERPkI3RRbA",
+        "outputId": "ecd15e2a-4b54-48b6-f4b5-22f003f8e7e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "month_ july\n",
+            "days in month31\n",
+            "31\n"
           ]
         }
       ]
