--- a/vaishnavi.ipynb
+++ b/vaishnavi.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMNUz4/uo0BqcJafzCtHJdl",
+      "authorship_tag": "ABX9TyPVTE4PoyJ/PDptVEFI9Bki",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -184,11 +184,11 @@
         "print(\"sub:\" ,sub)"
       ],
       "metadata": {
-        "id": "H4-lOnIUHjRO",
-        "outputId": "916e9d56-6d23-4134-ea12-bdeb440f033f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "H4-lOnIUHjRO",
+        "outputId": "916e9d56-6d23-4134-ea12-bdeb440f033f"
       },
       "execution_count": 4,
       "outputs": [
@@ -211,11 +211,11 @@
         "print(passion)"
       ],
       "metadata": {
-        "id": "q4lYBdKDIPal",
-        "outputId": "9dbf72c5-84ca-4e6b-f329-793af0af0474",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "q4lYBdKDIPal",
+        "outputId": "9dbf72c5-84ca-4e6b-f329-793af0af0474"
       },
       "execution_count": 7,
       "outputs": [
@@ -241,11 +241,11 @@
         "  print(\"pass\")\n"
       ],
       "metadata": {
-        "id": "jw5daDinIl8a",
-        "outputId": "026a7879-6d38-4365-b893-abf034c25aff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jw5daDinIl8a",
+        "outputId": "026a7879-6d38-4365-b893-abf034c25aff"
       },
       "execution_count": 9,
       "outputs": [
@@ -271,11 +271,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "uLzA1WQTKN_D",
-        "outputId": "251e6565-c152-443a-acdd-330d07919f13",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uLzA1WQTKN_D",
+        "outputId": "251e6565-c152-443a-acdd-330d07919f13"
       },
       "execution_count": 17,
       "outputs": [
@@ -302,11 +302,11 @@
         "  print(28)\n"
       ],
       "metadata": {
-        "id": "yRj4nZcqLWJb",
-        "outputId": "844e9c9e-b59e-4e26-9237-d53232b9b816",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yRj4nZcqLWJb",
+        "outputId": "844e9c9e-b59e-4e26-9237-d53232b9b816"
       },
       "execution_count": 18,
       "outputs": [
@@ -324,30 +324,176 @@
       "cell_type": "code",
       "source": [
         "month=input(\"month_ \")\n",
-        "days_in_month=int(input(\"days in month\"))\n",
         "if month==\"january\" or month==\"march\" or month==\"may\" or month==\"july\" or month==\"august\" or month==\"october\" or month==\"december\":\n",
-        "  print(days_in_month)\n",
+        "  days_in_month=31\n",
         "elif month==\"april\" or month==\"june\" or month==\"september\" or month==\"november\":\n",
-        "  print(days_in_month)\n",
+        "  days_in_month=30\n",
         "else:\n",
-        "  print(days_in_month)"
+        "  days_in_month=28\n",
+        "print(\"days-\",days_in_month)"
       ],
       "metadata": {
-        "id": "yUERPkI3RRbA",
-        "outputId": "ecd15e2a-4b54-48b6-f4b5-22f003f8e7e9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yUERPkI3RRbA",
+        "outputId": "03837923-c386-4917-f6f7-073673870f98"
       },
-      "execution_count": 19,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "month_ july\n",
-            "days in month31\n",
-            "31\n"
+            "month_ april\n",
+            "days- 30\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hotel=input(\"hotel_ \")\n",
+        "net_worth=int(input(\"net worth: \"))\n",
+        "if hotel==\"taj\":\n",
+        "  print(\"beautiful\")\n",
+        "  if net_worth>=200000:\n",
+        "    print(\"expensive\")\n",
+        "  else:\n",
+        "    print(\"cheap\")\n",
+        "else:\n",
+        "  print(\"decent\")\n",
+        "  if net_worth>=200000:\n",
+        "     print(\"expensive\")\n",
+        "  else:\n",
+        "    print(\"cheap\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "wHjyTsdqUXSC",
+        "outputId": "6bb73cab-b0e1-4ed2-cf02-785b2a00f7fa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hotel_ taj\n",
+            "net worth: 500000\n",
+            "beautiful\n",
+            "expensive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "principal=int(input(\"principal: \"))\n",
+        "rate=int(input(\"rate: \"))\n",
+        "time=int(input(\"time: \"))\n",
+        "amount=(principal*rate*time)/100\n",
+        "print(amount)"
+      ],
+      "metadata": {
+        "id": "R7LtqB5bYMCw",
+        "outputId": "c5fcc5be-27df-4e02-8779-01e87c34d80e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "principal: 40000\n",
+            "rate: 10\n",
+            "time: 9\n",
+            "36000.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "principal=40000\n",
+        "rate=10\n",
+        "time_in_month=8\n",
+        "days=20\n",
+        "day_in_month=days/30\n",
+        "amount=(principal*rate*time_in_month)/100\n",
+        "si=principal*rate*time_in_month*day_in_month/100\n",
+        "print(amount)\n",
+        "print(si)\n",
+        "print(amount+si)"
+      ],
+      "metadata": {
+        "id": "Ww43EXjSbYgx",
+        "outputId": "b02c0cac-21fb-444d-aed5-b5f9d94e6ff8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "32000.0\n",
+            "21333.33333333333\n",
+            "53333.33333333333\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "principal=40000\n",
+        "rate=10\n",
+        "month=\"july\"\n",
+        "print(month)\n",
+        "if month==\"january\" or month==\"march\" or month==\"may\" or month==\"july\" or month==\"august\" or month==\"october\" or month==\"december\":\n",
+        "  days_in_month=31\n",
+        "elif month==\"april\" or month==\"june\" or month==\"september\" or month==\"november\":\n",
+        "  days_in_month=30\n",
+        "else:\n",
+        "  days_in_month=28\n",
+        "time_in_month=8\n",
+        "days=20\n",
+        "total_time=days/days_in_month\n",
+        "amount=(principal*rate*time_in_month)/100\n",
+        "si=principal*rate*time_in_month*total_time/100\n",
+        "print(amount)\n",
+        "print(si)\n",
+        "print(amount+si)"
+      ],
+      "metadata": {
+        "id": "tmjIzpsMcgio",
+        "outputId": "1a8612c7-1445-440b-add7-2065e2a37b08",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "july\n",
+            "32000.0\n",
+            "20645.16129032258\n",
+            "52645.161290322576\n"
           ]
         }
       ]
